# succinct-mcmc

./: .gitignore  README.md  pyproject.toml
docs/: api_reference.md  design.md  examples.md  index.md  integration_guide.md
docs/superpowers/plans/: 2026-06-11-rewind.md
docs/superpowers/specs/: 2026-06-11-rewind-replayable-run-engine-design.md
examples/: agent_sim.py  gaussian_mean.py  hierarchical_model.py  hmc_bigdim.py  logistic_regression.py  mcmc.py
src/rewind/: __init__.py  cli.py  errors.py
src/rewind/core/: anchors.py  blocks.py  record.py  replay.py  run.py  seeds.py
src/rewind/io/: __init__.py  artifact.py
src/rewind/stats/: streaming.py
src/succinct_mcmc/: __init__.py  cli.py
src/succinct_mcmc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/succinct_mcmc/core/: __init__.py  anchors.py  block.py  compression.py  config.py  replay.py  rng.py
src/succinct_mcmc/diagnostics/: __init__.py  acf.py  ess.py  rhat.py  summary.py
src/succinct_mcmc/experimental/: __init__.py  compression_strategies.py  parallel_replay.py
src/succinct_mcmc/io/: __init__.py  artifact.py  serialize.py  storage_backends.py
src/succinct_mcmc/mcmc/: __init__.py  adapters.py  base.py  gibbs.py  hmc.py  metropolis.py  numpyro_adapter.py  pymc_adapter.py
src/succinct_mcmc/trace/: __init__.py  iterator.py  multi_chain.py  succinct_chain.py
src/succinct_mcmc/utils/: __init__.py  hashing.py  logging.py  parallel.py  profiling.py  progress.py
tests/: test_artifact_compat.py  test_chain_resume.py  test_cli.py  test_convergence_diagnostics.py  test_diagnostics_equivalence.py  test_iterators.py  test_kernel_adapters.py  test_kernels.py  test_multi_chain.py  test_parallel_utils.py  test_replay_exactness.py  test_rng_backends.py  test_storage_backends.py  test_storage_bounds.py  test_streaming_diagnostics.py
tests/rewind/: test_anchors.py  test_artifact.py  test_blocks.py  test_branch.py  test_cli.py  test_example_agent_sim.py  test_example_mcmc.py  test_properties.py  test_provenance.py  test_readme_quickstart.py  test_record_get.py  test_replay.py  test_security.py  test_seeds.py  test_smoke.py  test_stats.py  test_streaming.py  test_verify.py
