[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "succinct-mcmc"
version = "0.1.0"
description = "√T-space Markov chain Monte Carlo engine with deterministic replay"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Succinct MCMC Authors" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = []

[project.optional-dependencies]
numpy = ["numpy>=1.21"]
dev = [
    "pytest>=7",
    "numpy>=1.21",
]

[project.scripts]
succinct-mcmc = "succinct_mcmc.cli:main"

[project.urls]
Homepage = "https://github.com/logannye/succinct-mcmc"
Documentation = "https://github.com/logannye/succinct-mcmc/tree/main/docs"
Source = "https://github.com/logannye/succinct-mcmc"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["rewind*", "succinct_mcmc*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
