[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rewind-engine"
version = "0.1.0"
description = "Git for long stochastic runs: time-travel replay over seeded simulations"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Logan Nye" }]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Scientific/Engineering",
]
dependencies = []

[project.optional-dependencies]
numpy = ["numpy>=1.21"]
dev = [
    "pytest>=7",
    "numpy>=1.21",
    "hypothesis>=6",
]

[project.scripts]
rewind = "rewind.cli:main"

[project.urls]
Homepage = "https://github.com/logannye/rewind"
Source = "https://github.com/logannye/rewind"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["rewind*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
